# shokuryu-backend-mock

./: .gitignore  Untitled-1.ipynb  arari.ipynb  busyo.ipynb  daichu.ipynb  docker-compose.debug.yml  main.py  pyproject.toml  requirements.txt  tokei.ipynb  zaiko.ipynb
queries/: buka.py  soneki.py  toktan.py  urias.py
routers/: buka.py  busyo.py  soneki.py  toktan.py  urias.py  zaiko.py
