[tool.poetry]
name = "poetry add fastapi uvicorn gunicorn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
jupyterlab = "^3.4.3"
uvicorn = {extras = ["stndard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
